--- a/uzduotis/savaitgalio/react-wars/StarWarsApi/package.json
+++ b/uzduotis/savaitgalio/react-wars/StarWarsApi/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "app",
-  "homepage": "https://tavobankas.lt/",
+  "name": "starwarsapi",
   "private": true,
   "version": "0.0.0",
   "type": "module",
