--- a/uzduotis/09-30/youtube-app/back-end/package.json
+++ b/uzduotis/09-30/youtube-app/back-end/package.json
@@ -11,9 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.21.0",
     "mongoose": "^8.7.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7",
     "react-router-dom": "^6.26.2"
   }
