--- a/uzduotis/09-30/youtube-app/back-end/package.json
+++ b/uzduotis/09-30/youtube-app/back-end/package.json
@@ -12,11 +12,16 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "connect-mongo": "^5.1.0",
+    "connect-redis": "^7.1.1",
     "cors": "^2.8.5",
     "express": "^4.21.0",
+    "express-session": "^1.18.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "redis": "^4.7.0"
   }
 }
