--- a/uzduotis/09-30/youtube-app/back-end/package.json
+++ b/uzduotis/09-30/youtube-app/back-end/package.json
@@ -13,15 +13,21 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "connect-mongo": "^5.1.0",
-    "connect-redis": "^7.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7",
-    "react-router-dom": "^6.26.2",
-    "redis": "^4.7.0"
+    "react-router-dom": "^6.26.2"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
+    "@types/express-session": "^1.18.0",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/multer": "^1.4.12"
   }
 }
