--- a/uzduotis/10-07/bankas/back-end/.env
+++ b/uzduotis/10-07/bankas/back-end/.env
@@ -1,4 +1,4 @@
 DEV_PORT=3000
 DEV_CLIENT_URL=http://localhost:5173
 MONGO_URL=mongodb://192.168.1.114:27017/bankas
-API_URL=http://localhost:3000/api
+API_URL=http://192.168.1.116:3000/api
